# sayori

./: .env.sample  .gitignore  README.md  linakges_jr.csv  ods.csv  pyproject.toml  result.json  sayori.py  sayori_yonezawa.ipynb  transfers.csv
.github/workflows/: ai-pr-reviewer.yaml
data_yonezawa/: agency.txt  calendar.parquet  calendar.txt  calendar_dates.parquet  calendar_dates.txt  fare_attributes.txt  fare_rules.txt  feed_info.txt  routes.txt  stop_times.parquet  stop_times.txt  stops.parquet  stops.txt  transfers.parquet  translations.txt  trips.parquet  trips.txt  yonezawa.ipynb
demo/: demosayori_isochrones.py
od_yonezawa_based_stop_id.parquet/: _committed_2958952279068099478  _committed_7597389897474560305  _committed_vacuum9195627961114799187  part-00000-tid-7597389897474560305-7a8f602a-b508-4487-af54-55d4c76e5e85-36-1.c000.snappy.parquet  part-00001-tid-7597389897474560305-7a8f602a-b508-4487-af54-55d4c76e5e85-37-1.c000.snappy.parquet  part-00002-tid-7597389897474560305-7a8f602a-b508-4487-af54-55d4c76e5e85-38-1.c000.snappy.parquet  part-00003-tid-7597389897474560305-7a8f602a-b508-4487-af54-55d4c76e5e85-39-1.c000.snappy.parquet
pre_sayori/: pre_sayori__gtfs.py
presayori/: presayori_gtfs.py
sayori/: __main__.py  app_frontend.py  models.py  presayori.py  raptor.py
sayori/modules/: loader.py  models.py  raptor.py
