[tool.poetry]
name = "sayori"
version = "0.1.0"
description = ""
authors = ["Takanori Arai <takanori.arai@maas.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
geopandas = "^0.13.1"
pydantic = "^1.10.8"
holidays = "^0.25"
pyarrow = "^12.0.0"
streamlit = "^1.23.1"
streamlit-folium = "^0.12.0"
leafmap = "^0.21.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
